# etna_engine

./: .gitignore  CMakeLists.txt  Etna.pc.in
include/etna/: attachment-manager.hpp  etna.hpp  image-factory.hpp  image.hpp  swapchain-manager.hpp
resources/shaders/: compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
src/: app.cpp  app.hpp  application-manager.cpp  attachment-manager.cpp  attachment-manager.hpp  basic-attachment-manager.cpp  image-factory.cpp  image-factory.hpp  image.cpp  image.hpp  main.cpp  semaphore.cpp  shader-reader.cpp  shader-reader.hpp  swapchain-manager.cpp  swapchain-manager.hpp  vk-debug-callback-handler.cpp  vk-debug-callback-handler.hpp  vk-queue-family-indices.cpp  vk-queue-family-indices.hpp  vk-swap-chain-support-details.hpp
src/codes/: vk-message-type-code.cpp  vk-message-type-code.hpp  vk-object-type-code.cpp  vk-object-type-code.hpp  vk-physical-device-type-code.cpp  vk-physical-device-type-code.hpp  vk-result-code.cpp  vk-result-code.hpp  vk-severity-code.cpp  vk-severity-code.hpp  vk-version-code.cpp  vk-version-code.hpp
src/command-queue/: command-image.cpp  command-image.hpp  command-queue-pool.cpp  command-queue-pool.hpp  command-queue.cpp  command-queue.hpp
src/etna/: attachment-manager.cpp  attachment-manager.hpp  basic-attachment-manager.hpp  basic-framebuffer-manager.cpp  basic-framebuffer-manager.hpp  framebuffer-manager.cpp  framebuffer-manager.hpp  image-factory.cpp  image-factory.hpp  image.cpp  image.hpp  swapchain-manager.hpp
src/example/: app.cpp  app.hpp
src/vk/: barriers.hpp  codes.hpp  descriptors.hpp  framebuffer.hpp  image.hpp  instance.hpp  queue.hpp  render-pass.hpp  swapchain.hpp  vk-attachment.cpp  vk-debug-callback-handler.cpp  vk-debug-callback-handler.hpp  vk-fence.cpp  vk-memory.cpp  vk-memory.hpp  vk-semaphore.cpp  vk-semaphore.hpp  vk-shader.cpp  vk-surface.cpp  vk-surface.hpp  vk-viewport.cpp
src/vulkan/: buffer.hpp  command-buffer.hpp  commands.hpp  descriptors.hpp  device.hpp  image.hpp  pipeline.hpp  render-pass.hpp  resources.hpp  sampler.hpp  swapchain.hpp  vk-attachment.cpp  vk-attachment.hpp  vk-base-image.cpp  vk-base-image.hpp  vk-buffer.hpp  vk-command-buffer-pool.cpp  vk-command-buffer-pool.hpp  (+55 more)
(+390 files in other folders)
